big syscall fix
oops, turns out switching context while in the syscall would clobber the values in the cpulocal struct!!

(if proc A gets preempted while in a syscall by proc B, and proc B then itself does a syscall, the "saved" values of proc A would be overwritten by B!)

fixed by saving the stuff on the kernel stack instead. the cpu-local struct just holds the tss base now.

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -21,7 +21,7 @@ CXXOBJ          = $(CXXSRC:.cpp=.cpp.o)
 CXXDEPS         = $(CXXOBJ:.o=.d)
 
 DEBUG_FLAG      := -msse2 -O0 -g
-LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib
+LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib -nostdlib
 
 DEFINES         = -DORION_KERNEL=1 -D__ARCH_x64__=1
 INCLUDES        = -Iinclude -I$(PROJECT_DIR)/libs -I$(PROJECT_DIR)/libs/libkrt/include -I$(PROJECT_DIR)/libs/tinflate -I$(PROJECT_DIR)/efx/zircon-efi
