--- a/kernel/makefile
+++ b/kernel/makefile
@@ -7,7 +7,7 @@ WARNINGS        = -Wno-padded -Wno-cast-align -Wno-unreachable-code -Wno-switch-
 
 CXXFLAGS        = -m64 -Wall -fno-omit-frame-pointer -fno-strict-aliasing -Wno-old-style-cast -std=c++17 -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -mcmodel=kernel -c
 
-CFLAGS          = -m64 -Wall -fno-omit-frame-pointer -fno-strict-aliasing -std=c++11 -ffreestanding -mno-red-zone -mcmodel=kernel -c
+CFLAGS          = -m64 -Wall -fno-omit-frame-pointer -fno-strict-aliasing -std=c11 -ffreestanding -mno-red-zone -mcmodel=kernel -c
 
 
 SSRC            =  $(shell find source -name "arch" -prune -o -name "*.s" -print)
