--- a/libs/libc/makefile
+++ b/libs/libc/makefile
@@ -19,24 +19,26 @@ CXXOBJ		= $(CXXSRC:.cpp=.cpp.o)
 
 all: $(SYSROOT)/usr/lib/libc.a
 
-$(SYSROOT)/usr/lib/libc.a: $(COBJ) $(CXXOBJ) $(SOBJ) $(HDRS)
+print-libc:
 	@echo "# libc"
+
+$(SYSROOT)/usr/lib/libc.a: $(COBJ) $(CXXOBJ) $(SOBJ) $(HDRS)
 	@$(AR) rcs $(SYSROOT)/usr/lib/libc.a $(COBJ) $(CXXOBJ) source/platform/jmp/longjmp.s.o source/platform/jmp/setjmp.s.o source/platform/support/crti.s.o source/platform/support/crtn.s.o
 	@cp $(SYSROOT)/usr/lib/libc.a $(SYSROOT)/usr/lib/libg.a
 	@cp source/platform/support/crt0.s.o $(SYSROOT)/usr/lib/crt0.o
 	@cp source/platform/support/crti.s.o $(SYSROOT)/usr/lib/crti.o
 	@cp source/platform/support/crtn.s.o $(SYSROOT)/usr/lib/crtn.o
 
-%.c.o: %.c
-	@echo "# $(notdir $<)"
+%.c.o: %.c | print-libc
+	@echo "  $(notdir $<)"
 	@$(CC) $(CFLAGS) -o $@ $<
 
-%.cpp.o: %.cpp
-	@echo "# $(notdir $<)"
+%.cpp.o: %.cpp | print-libc
+	@echo "  $(notdir $<)"
 	@$(CXX) $(CXXFLAGS) -o $@ $<
 
-%.s.o: %.s
-	@echo "# $(notdir $<)"
+%.s.o: %.s | print-libc
+	@echo "  $(notdir $<)"
 	@$(AS) $< -o $@
 
 
