kernel: more infrastructure work for memticket.
at this point it might be possible to start userspace testing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-	"files.exclude": {
-		"toolchain-setup": true,
-		"kernel": true,
-		"build/toolchain": true
-	}
+  "files.exclude": {
+    "toolchain-setup": true,
+    "kernel": true,
+    "build/toolchain": true,
+    "build\\sysroot": true
+  }
 }
