--- a/libs/libnxsc/makefile
+++ b/libs/libnxsc/makefile
@@ -26,15 +26,15 @@ print-libnxsc:
 $(SYSROOT)/usr/lib/libnxsc.a: $(SOBJ) $(COBJ) $(CXXOBJ)
 	@$(AR) rcs $(SYSROOT)/usr/lib/libnxsc.a $(SOBJ) $(COBJ) $(CXXOBJ)
 
-%.c.o: %.c | print-libnxsc
+%.c.o: %.c makefile | print-libnxsc
 	@echo "  $(notdir $<)"
 	@$(CC) $(CFLAGS) -MMD -MP -Iinclude -o $@ $<
 
-%.cpp.o: %.cpp | print-libnxsc
+%.cpp.o: %.cpp makefile | print-libnxsc
 	@echo "  $(notdir $<)"
 	@$(CXX) $(CXXFLAGS) -MMD -MP -Iinclude -o $@ $<
 
-%.s.o: %.s | print-libnxsc
+%.s.o: %.s makefile | print-libnxsc
 	@echo "  $(notdir $<)"
 	@$(AS) $< -o $@
 
