kernel: disable sse (including krt and tinflate), and remove fancy console for now

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -27,7 +27,7 @@ CXXOBJ          = $(CXXSRC:.cpp=.cpp.o)
 CXXDEPS         = $(CXXOBJ:.o=.d)
 CDEPS           = $(COBJ:.o=.d)
 
-OPTIMISATIONS   := -O1 -g
+OPTIMISATIONS   := -mno-sse -mno-sse2 -O1 -g
 LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib -nostdlib
 
 DEFINES         = -DORION_KERNEL=1 -D__ARCH_x64__=1
