--- a/services/vfs-svr/makefile
+++ b/services/vfs-svr/makefile
@@ -1,7 +1,7 @@
 # Makefile for UnixCompatLibC.
 # Written in 2014
 
-CXXFLAGS	= -Wno-pragmas -O2 -std=c++17 -fno-strict-aliasing -Iinclude -fno-rtti
+CXXFLAGS	= -Wno-pragmas -O2 -std=c++17 -fno-strict-aliasing -Iinclude -fno-rtti -Wall -Werror=return-type
 
 CXXSRC		= $(shell find source -name "*.cpp")
 CXXOBJ		= $(CXXSRC:.cpp=.cpp.o)
@@ -15,7 +15,7 @@ $(INITRD_DIR)/services/vfs-svr: $(CXXOBJ) $(SYSROOT)/usr/lib/libc.a $(SYSROOT)/u
 	@echo "# vfs-svr"
 	@$(CXX) $(CXXFLAGS) -o $@ $(CXXOBJ)
 
-%.cpp.o: %.cpp
+%.cpp.o: %.cpp makefile
 	@$(CXX) $(CXXFLAGS) -c -MMD -MP -Iinclude -I$(PROJECT_DIR)/libs/libkrt/include -o $@ $<
 
 
