kernel: more rpc stuff
also, add zst header-only libs. right now it's just Result<T, E>

--- a/drivers/devices/makefile
+++ b/drivers/devices/makefile
@@ -2,4 +2,7 @@
 # Written in 2013
 
 all:
-	@find . -mindepth 1 -maxdepth 1 -type d -exec $(MAKE) -C {} \;
+	@find . -mindepth 1 -maxdepth 1 -type d -exec $(MAKE) -C {} all \;
+
+install-headers:
+	@find . -mindepth 1 -maxdepth 1 -type d -exec $(MAKE) -C {} install-headers \;
