--- a/drivers/devices/ps2/makefile
+++ b/drivers/devices/ps2/makefile
@@ -3,7 +3,9 @@
 
 CXXFLAGS	= -Wno-pragmas -O2 -std=c++17 -fno-strict-aliasing -I$(PROJECT_DIR)/libs/libkrt/include/
 
-.PHONY: all
+.PHONY: all install-headers
+
+install-headers:
 
 all: $(INITRD_DIR)/drivers/ps2
 
