--- a/kernel/makefile
+++ b/kernel/makefile
@@ -32,18 +32,25 @@ CDEPS           = $(COBJ:.o=.d)
 OPTIMISATIONS   := $(KERNEL_SSE_DISABLERS) -Og -g
 LDFLAGS         := -z max-page-size=0x1000 -L$(SYSROOT)/usr/lib -nostdlib
 
+PRECOMP_HDR     := include/precompile.h
+PRECOMP_GCH     := $(PRECOMP_HDR:.h=.h.gch)
+
 DEFINES         = -DORION_KERNEL=1 -D__ARCH_x64__=1
 INCLUDES        = -Iinclude -I$(PROJECT_DIR)/libs -I$(PROJECT_DIR)/libs/libkrt/include -I$(PROJECT_DIR)/libs/miniz -I$(PROJECT_DIR)/efx/zircon-efi
+
 
 KERNEL          = nxkernel64
 
 LIBKRT          = $(SYSROOT)/usr/lib/libkrt.a
 LIBMINIZ        = $(SYSROOT)/usr/lib/libminiz.a
 
-.PHONY: all
+UBSAN_FLAG      = -fsanitize=undefined
+
 .DEFAULT_GOAL = all
 
-UBSAN_FLAG      = -fsanitize=undefined
+
+.PHONY: all
+.PRECIOUS: $(PRECOMP_GCH)
 
 
 
@@ -61,21 +68,29 @@ $(SYSROOT)/boot/$(KERNEL): $(SOBJ) $(COBJ) $(CXXOBJ) $(LIBKRT) $(LIBMINIZ)
 	@echo "  $(notdir $<)"
 	@$(AS) -Isource/arch/$(ARCH)/include $< -o $@
 
-%.cpp.o: %.cpp makefile | print-kernel
-	@echo "  $(notdir $<)"
-	@$(CXX) $(CXXFLAGS) $(UBSAN_FLAG) $(WARNINGS) $(DEFINES) $(INCLUDES) $(OPTIMISATIONS) -MMD -MP -o $@ $<
-
 %.c.o: %.c makefile | print-kernel
 	@echo "  $(notdir $<)"
 	@$(CC) $(CFLAGS) $(UBSAN_FLAG) $(WARNINGS) $(DEFINES) $(INCLUDES) $(OPTIMISATIONS) -MMD -MP -o $@ $<
 
+%.cpp.o: %.cpp makefile $(PRECOMP_GCH) | print-kernel
+	@echo "  $(notdir $<)"
+	@$(CXX) $(CXXFLAGS) $(UBSAN_FLAG) $(WARNINGS) $(DEFINES) $(INCLUDES) $(OPTIMISATIONS) -include $(PRECOMP_HDR) -MMD -MP -o $@ $<
+
+%.h.gch: %.h makefile | print-kernel
+	@echo "  $(notdir $<)"
+	@$(CXX) $(CXXFLAGS) $(UBSAN_FLAG) $(WARNINGS) $(DEFINES) $(INCLUDES) $(OPTIMISATIONS) -MMD -MP -x c++-header -o $@ $<
 
 
-
+-include $(PRECOMP_HDR:.h=.h.d)
 -include $(CDEPS)
 -include $(CXXDEPS)
 
-
+clean:
+	@find . -name "*.o" -delete
+	@find . -name "*.h.d" -delete
+	@find . -name "*.cpp.d" -delete
+	@find . -name "*.h.gch" -delete
+	@rm -f $(SYSROOT)/boot/$(KERNEL)
 
 
 
